--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Assignment 4 | CIS2C</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+	<h1>Assignment 4 | CIS2C</h1>
 	<script src="script.js"></script>
 </body>
 
